tests/neg/this-in-main.scala
@main def Test(): Unit =
  val x = this // error
  println(x)
